Migration to primitive collections.